feat: Add post route and update HTML response
This commit adds a new post route '/submit' to the application in our index.ts file. It also optimizes the homepage route by storing the index.html content in a variable. In addition, the application's index.html is updated with a form, changing the main view from a 'Hello World!' greeting to a user-input form.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <title>XSS</title>
 </head>
 <body>
-<h1>Hello World!</h1>
+    <h1>XSS</h1>
+    <form action="/submit" method="post">
+        <label><input type="text" name="name" value="<script>alert('XSS');</script>"></label>
+        <input type="submit" value="Submit">
+    </form>
 </body>
 </html>
